# BookDebugger

./: README.md
backend/: api_server.py  pyproject.toml  test_client.py
frontend/: Dockerfile  package.json  render.yaml
frontend/src/: App.jsx  App1.jsx
