[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-limiter>=3.11.0",
    "flask>=3.1.2",
    "faiss-cpu>=1.13.0",
    "flask-cors>=6.0.2",
    "nltk>=3.9.2",
    "gensim>=4.4.0",
    "numpy>=2.0.2",
]
